--- a/estilos.css
+++ b/estilos.css
@@ -40,7 +40,7 @@ body{
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    color: #f8e9e9;
+    color: #723535;
 }
 
 
